--- a/biodiversity.ipynb
+++ b/biodiversity.ipynb
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [
     {
@@ -1176,7 +1176,7 @@
     "# plt.title('Number of Observations in each park')\n",
     "\n",
     "fig = px.bar(obervations_parks, x = 'park_name' , y = 'observations', title = 'Number of Observations in each park')\n",
-    "fig.show()"
+    "fig.show(enderer=\"png\")"
    ]
   },
   {
